--- a/templates/details/patients.html
+++ b/templates/details/patients.html
@@ -10,7 +10,7 @@
         <input type="text" id="searchInput" placeholder="Vyhľadaj pacienta podľa mena alebo rodného číslo..." />
     </div>
 
-    <a href="{{ url_for('patient.create_patient') }}"" class="small-token">
+    <a href="{{ url_for('patient.create_patient') }}"" class="small-token outlined">
         Pridať pacienta
     </a>
     <div id="results">
