--- a/templates/create/patient.html
+++ b/templates/create/patient.html
@@ -9,7 +9,7 @@
     <form id="patientForm" method="POST" action="{{ url_for('patient.create_patient') }}">
         <div class="form-group">
             <label for="meno">Meno</label>
-            <input type="text" name="meno" required>
+            <input type="text" name="meno">
         </div>
 
         <div class="form-group">
@@ -40,6 +40,11 @@
             <label for="adresa">Adresa</label>
             <input type="text" id="adresa" name="adresa" autocomplete="off">
             <div id="address-suggestions" class="suggestions"></div>
+        </div>
+
+        <div class="form-group" style="position: relative;">
+            <label for="mesto">Mesto</label>
+            <input type="text" id="mesto" name="mesto" autocomplete="off">
         </div>
 
         <div class="form-group">
@@ -83,6 +88,10 @@
         </div>
 
         <button type="submit" class="btn">Pridať</button>
+    </form>
+
+    <form>
+        <button type="button" class="btn warning" id="discardChangesBtn">Zahodiť zmeny</button>
     </form>
 </div>
 {% endblock %}
