--- a/templates/create/nurse.html
+++ b/templates/create/nurse.html
@@ -9,11 +9,11 @@
     <form id="nurseForm" method="POST" action="{{ url_for('nurse.create_nurse') }}">
         <div class="form-group">
             <label for="meno">Meno</label>
-            <input type="text" name="meno" id="meno" required>
+            <input type="text" name="meno" id="meno">
         </div>
         <div class="form-group">
             <label for="phone_number">Telefónne číslo</label>
-            <input type="text" name="phone_number" id="phone_number" required>
+            <input type="text" name="phone_number" id="phone_number">
         </div>
         <div class="form-group">
             <label for="kod">Kód</label>
