working on points, some progress, chnged vykony database

--- a/templates/bodovanie/bodovanie.html
+++ b/templates/bodovanie/bodovanie.html
@@ -53,14 +53,14 @@
 
         <div class="half-form-group">
             <div class="form-group" style="position: relative;">
-                <label for="diagnoza">Výkon</label>
+                <label for="vykon">Výkon</label>
                 <input type="text" id="vykon" name="vykon-display" autocomplete="off">
                 <div id="vykon-suggestions" class="suggestions"></div>
             </div>
 
             <div class="form-group">
                 <label for="body">Počet bodov</label>
-                <input type="number" name="body" value="5">
+                <input type="number" id="body" name="body" readonly>
             </div>
         </div>
 
